SpaceX info implemented

--- a/www/index.html
+++ b/www/index.html
@@ -29,14 +29,14 @@
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
 
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://auth.emilfolino.se https://nominatim.openstreetmap.org http://api.open-notify.org  data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; media-src *; img-src 'self' https://*.tile.openstreetmap.org data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://auth.emilfolino.se https://nominatim.openstreetmap.org http://api.open-notify.org https://api.spacexdata.com/v3/ data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; media-src *; img-src 'self' https://*.tile.openstreetmap.org https://images2.imgbox.com data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/style.min.css">
-        <title>Hello World</title>
+        <title>Space Nerds</title>
     </head>
     <body>
         <script type="text/javascript" src="cordova.js"></script>
