--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
 
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://auth.emilfolino.se https://nominatim.openstreetmap.org http://api.open-notify.org https://api.spacexdata.com/v3/ data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; media-src *; img-src 'self' https://*.tile.openstreetmap.org https://images2.imgbox.com data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://auth.emilfolino.se https://nominatim.openstreetmap.org http://api.open-notify.org https://api.spacexdata.com/v3/ data: gap: https://ssl.gstatic.com http://api.open-notify.org 'unsafe-eval'; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src 'self' https://fonts.gstatic.com; media-src *; img-src 'self' https://*.tile.openstreetmap.org https://images2.imgbox.com data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
